trunk/Archive2/f7/59c255e94bd681/output
main.cpp: In function 'int main()':
main.cpp:14:10: error: assignment of read-only reference 'gref'
     gref = 5;
          ^
